# ReflexTTS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.app  docker-compose.yml
docker/prometheus/: alerts.yml  prometheus.yml
docs/: agent-system-architecture.md  api-contracts.md  governance.md  latent-inpainting-architecture.md  product-proposal.md  project-overview.md  system-design.md  walkthrough-m0-infrastructure.md  walkthrough-m1-inference.md  walkthrough-m2-agents.md  walkthrough-m3-editor.md  walkthrough-m9-per-segment.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
scripts/: benchmark_texts.json  load_test.py  run_benchmarks.py
services/cosyvoice/: Dockerfile  server.py
services/whisperx/: Dockerfile  server.py
src/: __init__.py  config.py  log.py
src/agents/: __init__.py  actor.py  critic.py  director.py  editor.py  prompts.py  pronunciation_cache.py  schemas.py  segment_cache.py
src/api/: __init__.py  app.py  rate_limiter.py  redis_store.py  schemas.py  sessions.py
src/audio/: __init__.py  alignment.py  crossfade.py  masking.py  metrics.py
src/inference/: __init__.py  asr_client.py  model_registry.py  tts_client.py  vllm_client.py
src/monitoring/: __init__.py  exports.py  tracing.py
src/orchestrator/: __init__.py  graph.py  state.py
src/security/: __init__.py  input_sanitizer.py  pii_masker.py  voice_whitelist.py
tests/unit/: test_actor.py  test_api.py  test_asr_client.py  test_audio.py  test_benchmarks.py  test_config.py  test_critic.py  test_director.py  test_editor.py  test_graph.py  test_logging.py  test_model_registry.py  test_monitoring.py  test_pronunciation_cache.py  test_rate_limiter.py  test_schemas.py  test_security.py  test_segment_cache.py  test_tracing.py  test_tts_client.py  test_vllm_client.py
